Ajout d'une suite de tests backend et correction de trois bugs qu'elle a reveles
Suite de tests (86 tests, base H2 en memoire via un profil "test", aucune
dependance externe requise) :
- OrderServiceTest : checkout, webhooks de paiement, annulation, controle d'acces
- AuthServiceTest : inscription, connexion, 2FA, mot de passe oublie, Google
- CartServiceTest : ajout, cumul des quantites, controle de stock, ownership
- JwtServiceTest : generation, claims, signature, expiration
- OrderFlowIntegrationTest : parcours d'achat de bout en bout via HTTP
- SecurityIntegrationTest : chaine JWT reelle et cloisonnement client/admin

Corrections :
- Webhooks Stripe rendus idempotents. Stripe livre "au moins une fois" : chaque
  relivraison de payment_intent.payment_failed recreditait le stock une nouvelle
  fois, et payment_intent.succeeded renvoyait un second email de confirmation.
- GlobalExceptionHandler : suppression du fourre-tout RuntimeException qui
  traduisait l'AccessDeniedException de Spring Security en 400 au lieu de 403 et
  exposait le message d'exception interne au client. Remplace par des handlers
  cibles et un filet Exception -> 500 generique journalise. La classe herite
  desormais de ResponseEntityExceptionHandler pour laisser Spring MVC traiter
  nativement la validation, les 404 et les methodes non supportees.
- Authentification : ajout d'un authenticationEntryPoint (401) et d'un
  accessDeniedHandler (403) dans SecurityConfig, et d'un try/catch dans
  JwtAuthenticationFilter. Un anonyme recevait 403 au lieu de 401, et un token
  expire ou malforme provoquait une 500 car la JwtException etait levee dans le
  filtre, hors de portee du @RestControllerAdvice.

Au passage :
- Lombok 1.18.46 -> 1.18.48 : le projet ne compilait pas sous JDK 27
  (ExceptionInInitializerError sur com.sun.tools.javac.tree.EndPosTable).
- Suppression de la declaration Lombok en double dans le pom.
- SecurityConfig : .cors() etait appele deux fois, le premier appel etait mort.
- Les 